# Projet-555

./: .coverage  .gitignore  Dockerfile  README.md  create_user.py  hash.txt  pyproject.toml  verify_auth.py  verify_current_db.py
.github/workflows/: _01_integration.yaml  deploy_hf.yaml
Data/model/: features.joblib  model.joblib
Data/model/data/: entrainement_modele.ipynb  master_dataset.csv
alembic/: env.py
alembic/versions/: 22d78cbcc35a_initialisation_table_historique.py  b1376afc7c70_add_user_table.py
app/: main.py
app/core/: config.py  security.py
app/db/: database.py  models.py
tests/: conftest.py
tests/app/: test_app.py  test_security_manual.py
