[project]
name = "projet-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "gradio>=6.2.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
norecursedirs = ["tests/data"]

[tool.ruff]
# 1. Règles globales (Scripts .py et Notebooks .ipynb)
select = ["E", "F", "W"]
ignore = ["E501", "I"]

# 2. Paramètres spécifiques aux Notebooks
[tool.ruff.extend-per-file-ignores]
"*.ipynb" = [
    "E402", # Autorise les imports n'importe où (pas seulement au début)
    "F401", # Optionnel: ignore les imports inutilisés (fréquent en test/exploration)
    "W291", # Optionnel: si tu ne veux plus être embêté par les espaces en fin de ligne
    "W293"  # Optionnel: si tu ne veux plus être embêté par les espaces dans les lignes vides
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Petit snippet gentillement donné par gemini pour simplifier le linting