[project]
name = "projet-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "gradio>=6.2.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
norecursedirs = ["tests/data"]

[tool.ruff]
# On garde ici les réglages généraux (non liés au linting pur)
line-length = 88 

[tool.ruff.lint]
# On déplace tout ici comme demandé par le warning
select = ["E", "F", "W"]
ignore = ["E501", "I"]

[tool.ruff.lint.extend-per-file-ignores]
# Ton indulgence pour les notebooks, bien rangée sous la section lint
"*.ipynb" = ["E402", "W291", "W293"]

# Petit snippet gentillement donné par gemini pour simplifier le linting